# Limo_robocup2026

./: LICENSE  README.md  mimap.pgm  mimap.yaml
install/: local_setup.sh  setup.sh
install/joy/lib/joy/: game_controller_node  joy_node
install/joy/share/joy/: local_setup.sh  package.sh
install/joy_linux/lib/joy_linux/: joy_linux_node
install/joy_linux/share/joy_linux/: local_setup.sh  package.sh
install/limo_bringup/share/limo_bringup/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/limo_bringup/share/limo_bringup/config_files/: limo_lds_2d.lua
install/limo_bringup/share/limo_bringup/launch/: cartographer.launch.py  iniciar_mapeamento.launch.py  limo_navigation.launch.py  limo_start.launch.py  navigation2.launch.py
install/limo_bringup/share/limo_bringup/param/: navigation2.yaml  ydlidar.yaml
install/limo_description/share/limo_description/: local_setup.sh  package.sh
install/limo_msgs/share/limo_msgs/: local_setup.sh  package.sh
install/p9n_bringup/share/p9n_bringup/: package.dsv  package.ps1  package.sh
install/p9n_example/lib/p9n_example/: display_node_exec
install/p9n_example/share/p9n_example/: package.sh
install/p9n_interface/share/p9n_interface/: local_setup.sh  package.sh
install/p9n_node/include/p9n_node/: teleop_twist_joy_node.hpp
install/p9n_node/lib/p9n_node/: teleop_twist_joy_node_exec
install/p9n_node/share/p9n_node/: package.sh
log/: latest_build
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/log/: latest_build
(+22 files in other folders)
