<?xml version="1.0"?>
<package format="3">
  <name>limo_bringup</name>
  <version>0.0.0</version>
  <description>The limo_bringup package</description>

  <maintainer email="qie@todo.todo">qie</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>limo_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
